Finished CSS for dashboard and navbar

--- a/index.html
+++ b/index.html
@@ -59,18 +59,13 @@
         <!-- top half, search, alerts, profile, name-->
         <div class="top-navbar">
             <div class="search">
-                <div class="menu-item">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="text" name="searchbar">
-                </div>
-                <div class="account">
-                    <div class="menu-item">
-                        <i class="fa-regular fa-bell"></i>
-                    </div>
-                    <div class="github-avatar">
-                    </div>
-                    <p class="name">Superjim</p>
-                </div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" id="searchbar">
+            </div>
+            <div class="alerts">
+                <i class="fa-regular fa-bell"></i>
+                <div class="github-avatar"></div>
+                <p class="name">Superjim</p>
             </div>
         </div>
 
@@ -79,8 +74,8 @@
             <div class="user">
                 <div class="github-avatar"></div>
                 <div class="user-profile">
-                    <p class="greeting">Hello there</p>
-                    <p class="name">Jim <span class="username">@Superjim</span></p>
+                    <p class="greeting">Hello there,</p>
+                    <p class="name">Jim <span class="username">(@Superjim)</span></p>
                 </div>
             </div>
             <div class="button-container">
@@ -234,7 +229,7 @@
             </div>
             <!-- Trending 2 -->
             <div class="container">
-                <div class="github-avatar-1"></div>
+                <div class="github-avatar"></div>
                 <div class="account">
                     <p class="username">@morgan</p>
                     <p class="name container-text">Super Cool Project</p>
