Added css for the content
Need to perfect alignment, and finish trending section

--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
     <main class="content">
         <div class="projects">
             <h3>Your Projects</h3>
-            <!-- Card 1 -->
-            <div class="content-container">
+            <!-- Container 1 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Super Cool Project</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -106,14 +105,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Card 2 -->
-            <div class="content-container">
+            <!-- Container 2 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Less Cool Project</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -122,14 +120,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Card 3 -->
-            <div class="content-container">
+            <!-- Container 3 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Impossible App</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -138,14 +135,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Card 4 -->
-            <div class="content-container">
+            <!-- Container 4 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Easy Peasy App</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -154,14 +150,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Card 5 -->
-            <div class="content-container">
+            <!-- Container 5 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Ad Blocker</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -170,14 +165,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Card 6 -->
-            <div class="content-container">
+            <!-- Container 6 -->
+            <div class="project-container">
                 <div class="container">
                     <h4 class="container-heading">Money Maker</h4>
                     <p class="container-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
                         Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                        accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
                     </p>
                     <div class="container-icons">
                         <i class="fa-regular fa-star"></i>
@@ -191,28 +185,16 @@
         <div class="announcements">
             <h3>Announcements</h3>
             <div class="announcement-container">
-                <h4 class="annoucement-heading">Site Maintenance</h4>
-                <p class="container-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
-                    Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                    accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
-                </p>
+                <div class="container">
+                <h4>Site Maintenance</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi.</p>
+                <hr>
+                <h4>Community Share Day</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi.</p>
+                <hr>
+                <h4>Updated Privacy Policy</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. </p>
             </div>
-            <div class="announcement-container">
-                <h4 class="annoucement-heading">Community Share Day</h4>
-                <p class="container-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
-                    Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                    accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
-                </p>
-            </div>
-            <div class="announcement-container">
-                <h4 class="annoucement-heading">Updated Privacy Policy</h4>
-                <p class="container-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. 
-                    Illo ea, veniam exercitationem non quae alias aspernatur totam impedit commodi, 
-                    accusamus praesentium rem qui explicabo consequatur. Assumenda, quam quae.
-                </p>
             </div>
         </div>
 
@@ -220,37 +202,32 @@
         <div class="trending">
             <h3>Trending</h3>
             <!-- Trending 1 -->
-            <div class="container">
-                <div class="github-avatar-2"></div>
-                <div class="account">
+            <div class="trending-container">
+                <div class="user">
+                    <div class="github-avatar-2"></div>
                     <p class="username">@tegan</p>
-                    <p class="name container-text">World Peace Builder</p>
+                    <p class="name container-text">World Peace Builder</p>  
                 </div>
-            </div>
             <!-- Trending 2 -->
-            <div class="container">
+            <div class="user">
                 <div class="github-avatar"></div>
-                <div class="account">
                     <p class="username">@morgan</p>
                     <p class="name container-text">Super Cool Project</p>
                 </div>
-            </div>
-            <!-- Trending 3 -->
-            <div class="container">
+                    <!-- Trending 3 -->
+                    <div class="user">
                 <div class="github-avatar-3"></div>
-                <div class="account">
                     <p class="username">@kendall</p>
                     <p class="name container-text">Life Changing App</p>
                 </div>
-            </div>
-            <!-- Trending 4 -->
-            <div class="container">
+                    <!-- Trending 4 -->
+                    <div class="user">
                 <div class="github-avatar-4"></div>
-                <div class="account">
                     <p class="username">@alex</p>
                     <p class="name container-text">No Traffic Maker</p>
                 </div>
-            </div>
+                </div>
+
         </div>
     </main>
 
