Ive spent an hour and got nowhere
I dont actually remember what ive changed

--- a/index.html
+++ b/index.html
@@ -203,33 +203,30 @@
             <h3>Trending</h3>
             <!-- Trending 1 -->
             <div class="trending-container">
-                <div class="user">
-                    <div class="github-avatar-2"></div>
-                    <p class="username">@tegan</p>
-                    <p class="name container-text">World Peace Builder</p>  
+                <ul>
+                    <li>
+                        <div class="github-avatar-2"></div>
+                        <p class="username">@tegan</p>
+                        <p class="container-text">World Peace Builder</p>  
+                    </li>
+                    <li>
+                        <div class="github-avatar"></div>
+                        <p class="username">@morgan</p>
+                        <p class="container-text">Super Cool Project</p>
+                    </li>
+                    <li>
+                        <div class="github-avatar-3"></div>
+                        <p class="username">@kendall</p>
+                        <p class="container-text">Life Changing App</p>
+                    </li>
+                    <li>
+                        <div class="github-avatar-4"></div>
+                        <p class="username">@alex</p>
+                        <p class="container-text">No Traffic Maker</p>
+                    </li>
+                </ul>
                 </div>
-            <!-- Trending 2 -->
-            <div class="user">
-                <div class="github-avatar"></div>
-                    <p class="username">@morgan</p>
-                    <p class="name container-text">Super Cool Project</p>
-                </div>
-                    <!-- Trending 3 -->
-                    <div class="user">
-                <div class="github-avatar-3"></div>
-                    <p class="username">@kendall</p>
-                    <p class="name container-text">Life Changing App</p>
-                </div>
-                    <!-- Trending 4 -->
-                    <div class="user">
-                <div class="github-avatar-4"></div>
-                    <p class="username">@alex</p>
-                    <p class="name container-text">No Traffic Maker</p>
-                </div>
-                </div>
-
         </div>
     </main>
-
 </body>
 </html>
