Finalised trending layout

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
             <div class="announcement-container">
                 <div class="container">
                 <h4>Site Maintenance</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <hr>
                 <h4>Community Share Day</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <hr>
                 <h4>Updated Privacy Policy</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eligendi. </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
             </div>
         </div>
@@ -201,30 +201,47 @@
         <!-- Trending -->
         <div class="trending">
             <h3>Trending</h3>
-            <!-- Trending 1 -->
+
             <div class="trending-container">
-                <ul>
-                    <li>
+                <div class="container">
+
                         <div class="github-avatar-2"></div>
+                        <div class="name-container">
                         <p class="username">@tegan</p>
-                        <p class="container-text">World Peace Builder</p>  
-                    </li>
-                    <li>
+                        <p class="container-text">World Peace Builder</p>
+                    </div>
+                    </div>  
+                    <div class="container">
+
+
                         <div class="github-avatar"></div>
+                        <div class="name-container">
+
                         <p class="username">@morgan</p>
                         <p class="container-text">Super Cool Project</p>
-                    </li>
-                    <li>
+                    </div>  
+                </div>
+
+                    <div class="container">
+
                         <div class="github-avatar-3"></div>
+                        <div class="name-container">
+
                         <p class="username">@kendall</p>
-                        <p class="container-text">Life Changing App</p>
-                    </li>
-                    <li>
+                        <p class="container-text">Life Changing App</p> 
+                    </div>
+                </div>  
+                        <div class="container">
+
+
                         <div class="github-avatar-4"></div>
+                        <div class="name-container">
+
                         <p class="username">@alex</p>
                         <p class="container-text">No Traffic Maker</p>
-                    </li>
-                </ul>
+                        </div>
+                    </div>
+
                 </div>
         </div>
     </main>
